# atheer-rust

./: .gitignore  BENCHMARK-GAP-ANALYSIS.md  BENCHMARKS.md  Cargo.toml  DESKTOP_BROWSER_PRD.md  FURTHER_RESEARCHS.md  INVESTOR-DECK.md  PROGRESS.md  README.md  WHITEPAPER.md  anchored_summary.md  improvement_analysis.md  index.html  macOS-PRD.md  package.json
.github/workflows/: android-ci.yml  benchmark.yml  ci.yml
.husky/: pre-commit
android/: .gitignore  KeyStoreManager.kt  gradlew  settings.gradle.kts
android/aidl/com/atheer/ffi/sandbox/: IGpuExecutionShard.aidl  ISandboxedGpuBridge.aidl
android/atheer-sdk/: build.gradle.kts
android/atheer-sdk/src/androidTest/kotlin/com/atheer/ffi/sandbox/: GpuExecutionShardIntegrationTest.kt  GpuExecutionShardProbeFailureTest.kt
android/atheer-sdk/src/main/: AndroidManifest.xml
android/atheer-sdk/src/main/kotlin/com/atheer/ffi/: MainActivity.kt  atheer_ffi.kt
android/gradle/: libs.versions.toml
android/service/: GpuExecutionShardService.kt
android/uniffi/atheer_ffi/: atheer_ffi.kt
atheer-accel/: Cargo.toml  build.rs
atheer-accel/shaders/: attention.glsl  compute_logits.glsl  gemv.glsl
atheer-accel/src/: backend.rs  coreml.rs  cpu.rs  error.rs  lib.rs  manager.rs  metal.rs  nnapi.rs  nnapi_ndk.rs  traits.rs  vulkan.rs
atheer-bindgen/: Cargo.toml
atheer-bindgen/src/: main.rs
atheer-core/: ACCURACY.md  Cargo.toml
atheer-core/src/: accuracy.rs  block_manager.rs  cert_pinner.rs  crash.rs  error.rs  gguf_validator.rs  inference.rs  kv_cache.rs  kv_cache_bridge.rs  kv_cache_quantizer.rs  latency_budget.rs  lib.rs  lifecycle.rs  mmap_model.rs  model.rs  model_credential.rs  model_registry.rs  model_verifier.rs  privacy.rs  production.rs  quantization_resolver.rs  safe_content.rs  safety.rs  sampler.rs  security.rs  session.rs  streaming.rs  tensor_validation.rs  test_model.rs  tokenizer.rs  weights.rs
atheer-core/src/guardrails/: analyzer.rs  builtin_patterns.json  detector.rs  mod.rs  normalizer.rs  output_check.rs  patterns.rs  test_suite.rs  verdict.rs
atheer-core/src/model_encryption/: aes256_gcm.rs  mod.rs  stubs.rs
atheer-core/src/sandbox/: bridge.rs  mod.rs
atheer-core/test_data/: s4_guardrails_test_suite.json
atheer-encrypt/: Cargo.toml
atheer-encrypt/src/: main.rs
atheer-ffi/: .gitignore  Cargo.toml  build.gradle.kts  uniffi.toml
atheer-ffi/src/: backend_type.rs  config.rs  engine.rs  error.rs  ffi.rs  guardrails.rs  lib.rs  mode.rs  privacy.rs  status.rs  streaming.rs  thermal.rs  types.rs
atheer-gpu-shard/: Cargo.toml
atheer-gpu-shard/src/: lib.rs
atheer-hardware/: Cargo.toml
atheer-hardware/src/: android.rs  error.rs  health.rs  ios.rs  lib.rs  memory.rs  monitor.rs  power.rs  thermal.rs
atheer-memory-bank/: Cargo.toml
atheer-memory-bank/src/: encrypted_store.rs  error.rs  handoff.rs  kv_cache.rs  kv_sync.rs  l1_active.rs  l2_warm.rs  l3_compressed.rs  lib.rs  memory_bank.rs
atheer-orchestrator/: Cargo.toml
atheer-orchestrator/src/: agent.rs  calibrator.rs  config.rs  error.rs  inference_mode.rs  lib.rs  orchestrator.rs  thermal_model.rs
atheer-orchestrator/src/grammar/: json.rs  mod.rs  sampler.rs  trie.rs
atheer-orchestrator/src/modes/: balanced.rs  eco.rs  mod.rs  speculative.rs  turbo.rs
candle-core/: CLIPPY_FIXES.md  Cargo.toml  build.rs
candle-core/benches/benchmarks/: mod.rs
candle-core/shaders/: affine.glsl  binary_add.glsl  binary_div.glsl  binary_mul.glsl  cast.glsl  copy.glsl  dequant_q4k.glsl  matmul_f16.glsl  reduce.glsl  unary_exp.glsl  unary_silu.glsl  where_cond.glsl
candle-core/src/: custom_op.rs  device.rs  display.rs  dummy_vulkan_backend.rs  error.rs  lib.rs  safetensors.rs  storage.rs  tensor.rs  utils.rs
candle-core/src/metal_backend/: mod.rs
candle-core/src/nnapi_backend/: device.rs  executor.rs  graph.rs  mod.rs  nnapi_ndk.rs  storage.rs
candle-core/src/quantized/: dummy_vulkan.rs  ggml_file.rs  mod.rs  vulkan.rs
candle-core/src/vulkan_backend/: device.rs  mod.rs
candle-core/src/vulkan_backend_old/: mod.rs
candle-core/src/vulkan_backend_wgpu/: device.rs  mod.rs  shaders.rs
candle-core/tests/: nnapi_tests.rs  quantized_tests.rs  vulkan_tests.rs
candle-coreml/: CLIPPY_FIXES.md  Cargo.toml
candle-coreml/src/: lib.rs  model.rs
candle-coreml/src/qwen/: inference.rs
candle-transformers/: Cargo.toml
candle-transformers/src/: lib.rs
candle-transformers/src/models/: quantized_lfm2.rs  quantized_llama.rs
fuzz/: Cargo.toml
fuzz/src/: lib.rs
ios/: AtheerKeychain.swift  atheer_ffi.swift  atheer_ffiFFI.h  atheer_ffiFFI.modulemap
landing-page/: index.html  index.html.backup  wrangler.jsonc  wrangler.jsonc.backup
perf-bench/: Cargo.toml
perf-bench/benches/: checkpoint.rs  energy.rs  kv_cache_quantize.rs  latency.rs  memory.rs  mode_switching.rs  sustained.rs  thermal_response.rs  thermal_throttling.rs  throughput.rs
perf-bench/src/: bench_runner.rs  cli.rs  main.rs  power_monitor.rs  report.rs
scripts/: download-test-model.sh  generate-bindings.sh  sync-udl.sh
tests/: Cargo.toml
tests/benches/: Cargo.toml
tests/benches/benches/: kv_cache.rs  ngram_cache.rs  orchestrator.rs
tests/proptest-regressions/: property_tests.txt
tests/src/: lib.rs  memory_bank_integration.rs  orchestrator_integration.rs  property_tests.rs  smoke_test.rs
tools/: bench-compare.py
tools/gen-bindings/: Cargo.toml
tools/gen-bindings/src/: main.rs
