[package]
name = "atheer-accel"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

rayon = "1.12"
candle-core = "0.10.2"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
candle-core = { version = "0.10.2", features = ["metal"] }
sysctl = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
ash = { workspace = true }
gpu-allocator = { workspace = true }
bytemuck = "1.25"

[build-dependencies]
naga = { workspace = true }
spirt = { workspace = true }
