[package]
name = "atheer-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
uniffi = { workspace = true }
memmap2 = { workspace = true }
tracing = { workspace = true }

uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
tokenizers = "0.23.1"
rand = "0.8"
regex = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "3"
tempfile = "3.27"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
hkdf = "0.12"
dirs = "5.0"
filetime = "0.2"
unicode-normalization = "0.1"
base64 = "0.22"
reqwest = { workspace = true, features = ["blocking", "rustls-tls"], optional = true }
atheer-memory-bank = { path = "../atheer-memory-bank", optional = true }
atheer-accel = { path = "../atheer-accel", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }
webpki-roots = { version = "0.26", optional = true }
rustls-webpki = { version = "0.103", optional = true }

[features]
default = ["gguf-validator"]
auto-backend = ["atheer-accel"]
memory-bank = ["atheer-memory-bank"]
mmap = []
model-registry = ["dep:reqwest", "dep:rustls", "dep:webpki-roots", "dep:rustls-webpki"]
gguf-validator = []

[dev-dependencies]
