[package]
name = "atheer-ffi"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uniffi = { workspace = true }
sha2 = "0.10"
hex = "0.4"
hkdf = "0.12"

atheer-core = { path = "../atheer-core" }
atheer-orchestrator = { path = "../atheer-orchestrator" }
atheer-memory-bank = { path = "../atheer-memory-bank" }
atheer-hardware = { path = "../atheer-hardware" }
atheer-accel = { path = "../atheer-accel" }
candle-core = "0.10.2"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"] # staticlib for iOS, cdylib for Android, rlib for Rust dependencies

[dev-dependencies]
tempfile = "3"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
