[package]
name = "atheer-gpu-shard"
version.workspace = true
edition.workspace = true

[lib]
name = "atheer_gpu_shard"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
atheer-accel = { path = "../atheer-accel" }

[target.'cfg(target_os = "android")'.dependencies]
ash = { workspace = true }
