[package]
name = "atheer-hardware"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(target_os = "ios")'.dependencies]
block = "0.1"
