[package]
name = "atheer-memory-bank"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
lz4 = { workspace = true }
aes-gcm = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }

rand = "0.8"
uuid = { version = "1.23", features = ["v4"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
