[package]
name = "candle-coreml"
version = "0.3.1"
edition = "2021"
description = "CoreML inference engine for Candle tensors (vendored fork)"
license = "MIT OR Apache-2.0"

[dependencies]
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
tokenizers = "0.21.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
dirs = "6.0.0"
half = "2"
tracing = "0.1"
once_cell = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-ml = "0.3"
block2 = "0.6"
