[package]
name = "perf-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
atheer-core = { path = "../atheer-core", features = ["auto-backend"] }
atheer-accel = { path = "../atheer-accel" }
atheer-orchestrator = { path = "../atheer-orchestrator" }
atheer-memory-bank = { path = "../atheer-memory-bank" }
atheer-hardware = { path = "../atheer-hardware" }
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
criterion = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bench]]
name = "kv_cache_quantize"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "checkpoint"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "sustained"
harness = false

[[bench]]
name = "energy"
harness = false

[[bench]]
name = "mode_switching"
harness = false

[[bench]]
name = "thermal_throttling"
harness = false
